Added exit confirm modal, and some more paused related state

--- a/client/src/StudentDashboard/components/NavigationBar/styles.css
+++ b/client/src/StudentDashboard/components/NavigationBar/styles.css
@@ -59,6 +59,18 @@
 
 .logoutLabel {
 	font-weight: bold;
+	color: white;
+	cursor: pointer;
+}
+
+.logoutLabel:visited {
+	color: white;
+}
+
+.logoutLabel:hover {
+	color: white;
+	background-color: transparent;
+	text-decoration: none;
 }
 
 .logoutIcon {
