--- a/app/views/static_pages/homepage/index.erb
+++ b/app/views/static_pages/homepage/index.erb
@@ -1,190 +1,127 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
 
 
-    <%= render 'static_pages/components/headers' %>
+  <%= render 'static_pages/components/headers' %>
 
-    <%= render 'static_pages/homepage/headers/mixpanel', locals: {mixpanel_homepage_key: @mixpanel_homepage_key} %>
+  <%= render 'static_pages/homepage/headers/mixpanel', locals: {mixpanel_homepage_key: @mixpanel_homepage_key} %>
 
-    <%= render 'static_pages/homepage/headers/libraries' %>
+  <%= render 'static_pages/homepage/headers/libraries' %>
 
-    <%= render 'static_pages/components/favicon' %>
+  <%= render 'static_pages/components/favicon' %>
 
-    <!-- our stylesheets -->
-    <link rel="stylesheet" href="stylesheets/alert.css" type="text/css" />
-    <link rel="stylesheet" href="stylesheets/teacher-form-input.css" type="text/css" />
-    <link rel="stylesheet" href="stylesheets/homepage.css" type="text/css" />
-    <link rel="stylesheet" href="stylesheets/fonts.css" type="text/css">
-    <!-- This is only needed for below-the-fold content. -->
-    <link rel="stylesheet" href="stylesheets/main.css" type="text/css" />
+  <!-- our stylesheets -->
+  <link rel="stylesheet" href="stylesheets/alert.css" type="text/css" />
+  <link rel="stylesheet" href="stylesheets/teacher-form-input.css" type="text/css" />
+  <link rel="stylesheet" href="stylesheets/homepage.css" type="text/css" />
+  <link rel="stylesheet" href="stylesheets/fonts.css" type="text/css">
+  <!-- This is only needed for below-the-fold content. -->
+  <link rel="stylesheet" href="stylesheets/main.css" type="text/css" />
 
-    <!-- our scripts -->
-    <script type="text/javascript" src="/js/validations.js"></script>
-    <script type="text/javascript" src="/js/homepage.js"></script>
-    <script type="text/javascript" src="/js/videoModal.js"></script>
-    <script type="text/javascript" src="/js/helpers.js"></script>
+  <!-- our scripts -->
+  <script type="text/javascript" src="/js/validations.js"></script>
+  <script type="text/javascript" src="/js/homepage.js"></script>
+  <script type="text/javascript" src="/js/videoModal.js"></script>
+  <script type="text/javascript" src="/js/helpers.js"></script>
 
-    <script type="text/javascript">
-      $(document).ready(function(){
+  <script type="text/javascript">
+    $(document).ready(function(){
 
-        $(window).scroll(function (event) {
-          var scroll = $(window).scrollTop();
-          if (scroll < 645) {
-            $('.navbar').removeClass('highlighted');
-          } else {
-            $('.navbar').addClass('highlighted');
-          }
-        });
-        $('.modal input').on('click', function () {
-          $(this).focus();
-        })
-        if (isMobileDevice()) {
-          $('body').addClass('isMobile');
+      $(window).scroll(function (event) {
+        var scroll = $(window).scrollTop();
+        if (scroll < 645) {
+          $('.navbar').removeClass('highlighted');
         } else {
-          $('body').addClass('isDesktop');
+          $('.navbar').addClass('highlighted');
         }
       });
-    </script>
+      $('.modal input').on('click', function () {
+        $(this).focus();
+      })
+      if (isMobileDevice()) {
+        $('body').addClass('isMobile');
+      } else {
+        $('body').addClass('isDesktop');
+      }
+    });
+  </script>
 
-  </head>
+</head>
 
-  <body id="override">
+<body id="override">
 
   <!-- Notify about form submission -->
   <% if flash[:notice] %>
-    <div id="alert">
-        <a class="alert" href="#alert">Great! Someone from our outreach team will be in touch soon.</a>
-    </div>
+  <div id="alert">
+    <a class="alert" href="#alert">Great! Someone from our outreach team will be in touch soon.</a>
+  </div>
   <% end %>
 
-      <!-- Notify about form submission -->
+  <!-- Notify about form submission -->
   <% if flash[:signin_error] %>
-    <div id="alert">
-        <a class="alert" href="#alert">Incorrect login info.</a>
-    </div>
+  <div id="alert">
+    <a class="alert" href="#alert">Incorrect login info.</a>
+  </div>
   <% end %>
 
 
   <% if flash[:freemium_permission_error] %>
-    <div id="alert">
-        <a class="alert" href="#alert">Your free ReadUp trial is almost ready! We'll let you know when you're off the waitlist.</a>
-    </div>
+  <div id="alert">
+    <a class="alert" href="#alert">Your free ReadUp trial is almost ready! We'll let you know when you're off the waitlist.</a>
+  </div>
   <% end %>
 
   <% if flash[:wrong_grade_level_error] %>
-    <div id="alert">
-        <a class="alert" href="#alert">Right now, ReadUp is only available for preschool. We'll email you when it's ready for your grade level!</a>
-    </div>
+  <div id="alert">
+    <a class="alert" href="#alert">Right now, ReadUp is only available for preschool. We'll email you when it's ready for your grade level!</a>
+  </div>
   <% end %>
 
   <!-- modals -->
   <div>
-
-      <%= render 'static_pages/homepage/modals/rayna-video' %>
-      <%= render 'static_pages/homepage/modals/signup-name-password' %>
-      <%= render 'static_pages/homepage/modals/gotta-wait' %>
-      <%= render 'static_pages/homepage/modals/demo' %>
-      <%= render 'static_pages/homepage/modals/signup-email' %>
-      <%= render 'static_pages/homepage/modals/congrats-modal' %>
+    <%= render 'static_pages/homepage/modals/rayna-video' %>
+    <%= render 'static_pages/homepage/modals/signup-name-password' %>
+    <%= render 'static_pages/homepage/modals/gotta-wait' %>
+    <%= render 'static_pages/homepage/modals/demo' %>
+    <%= render 'static_pages/homepage/modals/signup-email' %>
+    <%= render 'static_pages/homepage/modals/congrats-modal' %>
+  <%= render 'static_pages/homepage/modals/mobile-signup' %>
   </div>
   <!-- modals end -->
 
-   <nav class="navbar navbar-mobile" role="navigation">
-     <div class="container">
-       <a href="/" id="navbar-title">
-         <div>
-           ReadUp
-         </div>
-       </a>
-       <ul class="navbar-right">
-
-         <li class="navbar-button-item">
-           <a>
-             <% if session['educator'].nil? %>
-               <!-- <button id="top-button" class="pure-button-primary pure-button signup-button" data-toggle="modal" data-target="#chooseRoleModal"> -->
-               <button id="top-button" class="signup-button logger-in log-in-fake-button">
-               Log in
-               </button>
-             <% else %>
-               <form action="signup" method="get">
-                 <button id="top-button" type="submit" class="signup-button logger-in log-in-fake-button">
-                   Log in
-                 </button>
-               </form>
-             <% end %>
-           </a>
-         </li>
-
-       </ul>
-     </div>
-   </nav>
 
 
 
-      <nav class="navbar" role="navigation">
-        <div class="container">
-          <a href="/" id="navbar-title">
-            <div>
-              ReadUp
-            </div>
-          </a>
-          <ul class="navbar-right">
-            <li><a id="case-study-link" href="case_study">Success Stories</a></li>
-            <li><a href="team">About Us</a></li>
-            <li class="navbar-button-item">
-              <a>
-                <% if session['educator'].nil? %>
-                  <!-- <button id="top-button" class="pure-button-primary pure-button signup-button" data-toggle="modal" data-target="#chooseRoleModal"> -->
-                  <button id="top-button" class="signup-button logger-in log-in-fake-button">
-                  Log in
-                  </button>
-                <% else %>
-                  <form action="signup" method="get">
-                    <button id="top-button" type="submit" class="signup-button logger-in log-in-fake-button">
-                      Log in
-                    </button>
-                  </form>
-                <% end %>
-              </a>
-            </li>
-
-            <li class="navbar-button-item">
-              <a>
-                  <button id="top-button" onclick="mixpanel.track('navbar signup button clicked', {'location': 'navbar'});" data-toggle="modal" data-target="#signupEmail" class="pure-button-primary pure-button signup-button">
-                    Sign up
-                  </button>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+  <%= render 'static_pages/homepage/navbar' %>
 
 
 
-  <%= render 'static_pages/homepage/modals/mobile-signup' %>
 
 
-
-  <div class="splash-new">
-    <div class="splash-container">
-      <div class="title" style="width:40em;">
-        <h1 id="pitch">ReadUp does running records for you.</h1>
-        <center><h4 id="sub-pitch" style="width:35em">
+<div class="splash-new">
+  <div class="splash-container">
+    <div class="title" style="width:40em;">
+      <h1 id="pitch">ReadUp does running records for you.</h1>
+      <center>
+        <h4 id="sub-pitch" style="width:35em">
           ReadUp listens to students read and creates a full running record for you.
-        </h4></center>
-        <button type="button" data-toggle="modal" data-target="#signupEmail" class="btn btn-primary btn-lg pure-button pure-button-primary get_update dialog-button" id="main-signup-button" onclick="mixpanel.track('splash signup button clicked', {'location': 'splash'});">
-                    Sign up
-                  </button>
-      </div>
-
-
+        </h4>
+      </center>
+      <button
+        type="button"
+        data-toggle="modal"
+        data-target="#signupEmail"
+        class="btn btn-primary btn-lg pure-button pure-button-primary get_update dialog-button"
+        id="main-signup-button"
+        onclick="mixpanel.track('splash signup button clicked', {'location': 'splash'});"
+      >
+        Sign up
+      </button>
     </div>
-    <!-- End container -->
   </div>
-  <!-- End Splash -->
+</div>
 
-<!-- body -->
 
 
 <section class="product-display" id="end-no-reading">
@@ -230,7 +167,6 @@
           <p style="color:#ffffff;"><b>Track student progress</b> over the year and see reading growth. </p>
           <p style="color:#ffffff;"><b>Share with parents</b> to celebrate student gains.</p>
           <p style="color:#ffffff;"><b>See reading weaknesses</b> and get strategies to target those. </p>
-          </span>
         </ul>
       </div>
     </div>
@@ -242,53 +178,54 @@
 
 
 
-<!-- body END -->
+
+<h1 class="banner" id="call-to-action">Spend your time teaching, not testing.</h1>
+
+<p><center><b>Learn more about using ReadUp across your school.</b></center></p>
+
+<div class="demo" data-toggle="modal" data-target="#myDemo">
+
+  <button
+    type="button"
+    onclick="DemoButtonClicked();"
+    class="demo-request-button btn btn-primary btn-lg pure-button pure-button-primary get_update dialog-button" style="width: 11em;"
+    id="start-modal-button"
+  >
+  Request a Demo
+</button>
+</div>
+
+
+<img class="contact-image call-to-action-image" src="https://d2yudi7y1eei74.cloudfront.net/assets/phone.png">
+<a href="mailto:hello@joinstorytime.com?&subject=Storytime">
+  <img id="email-image" class="contact-image call-to-action-image call-to-action-email-image" src="https://d2yudi7y1eei74.cloudfront.net/assets/email.png">
+</a>
+
+</div>
 
 
 
-    <h1 class="banner" id="call-to-action">Spend your time teaching, not testing.</h1>
+<%= render 'static_pages/components/footer' %>
 
-    <p><center><b>Learn more about using ReadUp across your school.</b></center></p>
-
-          <div class="demo" data-toggle="modal" data-target="#myDemo">
-
-                  <button type="button" onclick="DemoButtonClicked();" class="demo-request-button btn btn-primary btn-lg pure-button pure-button-primary get_update dialog-button" style="width: 11em;" id="start-modal-button">
-                    Request a Demo
-                  </button>
-          </div>
-
-
-          <img class="contact-image call-to-action-image" src="https://d2yudi7y1eei74.cloudfront.net/assets/phone.png">
-          <a href="mailto:hello@joinstorytime.com?&subject=Storytime">
-              <img id="email-image" class="contact-image call-to-action-image call-to-action-email-image" src="https://d2yudi7y1eei74.cloudfront.net/assets/email.png">
-          </a>
-
-  </div>
-
-
-
-  <%= render 'static_pages/components/footer' %>
-
-  <script>
-      mixpanel.track_links("a#case-study-link", "Case study link clicked");
-      mixpanel.track('Homepage visited');
-      function CaseStudyClicked() {
-        mixpanel.track("Case Study Clicked");
-      }
-      function VideoButtonClicked() {
-        mixpanel.track("Video Modal Clicked");
-      }
-      function DemoButtonClicked() {
-        mixpanel.track("Demo Button Clicked");
-      }
-  </script>
+<script>
+  mixpanel.track_links("a#case-study-link", "Case study link clicked");
+  mixpanel.track('Homepage visited');
+  function CaseStudyClicked() {
+    mixpanel.track("Case Study Clicked");
+  }
+  function VideoButtonClicked() {
+    mixpanel.track("Video Modal Clicked");
+  }
+  function DemoButtonClicked() {
+    mixpanel.track("Demo Button Clicked");
+  }
+</script>
 
 <!-- begin olark code -->
 <script type="text/javascript" async> ;(function(o,l,a,r,k,y){if(o.olark)return; r="script";y=l.createElement(r);r=l.getElementsByTagName(r)[0]; y.async=1;y.src="//"+a;r.parentNode.insertBefore(y,r); y=o.olark=function(){k.s.push(arguments);k.t.push(+new Date)}; y.extend=function(i,j){y("extend",i,j)}; y.identify=function(i){y("identify",k.i=i)}; y.configure=function(i,j){y("configure",i,j);k.c[i]=j}; k=y._={s:[],t:[+new Date],c:{},l:a}; })(window,document,"static.olark.com/jsclient/loader.js");
-/* custom configuration goes here (www.olark.com/documentation) */
-olark.identify('9084-375-10-8744');</script>
-<!-- end olark code -->
+  /* custom configuration goes here (www.olark.com/documentation) */
+  olark.identify('9084-375-10-8744');</script>
+  <!-- end olark code -->
 
-  </body>
-
+</body>
 </html>
