--- a/app/views/static_pages/homepage/modals/_mobile-signup.erb
+++ b/app/views/static_pages/homepage/modals/_mobile-signup.erb
@@ -13,7 +13,9 @@
               <input type="hidden" name='username'>
             </div>
 
-              <button type="button" id="signup-email-button-mobile" class="signup-form-button pure-button pure-button-primary get_update dialog-button">Continue</button>
+              <button type="button" id="signup-email-button-mobile" class="signup-form-button pure-button pure-button-primary get_update dialog-button">
+                Continue
+              </button>
         </div>
     </form>
 
