--- a/app/views/static_pages/pages/resources.erb
+++ b/app/views/static_pages/pages/resources.erb
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/stylesheets/fonts.css" type="text/css" />
+  	<%= stylesheet_link_tag "fonts" %>
     <link rel="stylesheet" href="/stylesheets/form.css" type="text/css" />
 	<link href='https://fonts.googleapis.com/css?family=Karla:400,400italic,700' rel='stylesheet' type='text/css'>
         <title>ReadUp Resources</title>
