--- a/public/stylesheets/sass/homepage/_product-sections.scss
+++ b/public/stylesheets/sass/homepage/_product-sections.scss
@@ -73,7 +73,7 @@
    align-items: center; 
    margin: 0 auto;
    padding-top: 0em;
-   background: url('/images/landing-page-hero.jpg') center top/cover no-repeat #ba9e70;
+   background: url('https://s3-us-west-2.amazonaws.com/readup-now/website/landing-page-hero-student-reading.jpg') center top/cover no-repeat #ba9e70;
 
 
    .splash-container {
