edits to signup form on landing page

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -694,7 +694,7 @@ fieldset input {
 
 
 button.get_update{
-	background-color: #ed7844; 
+	background-color: #61c242; 
 	font-family: 'Conv_proximanova-bold-webfont', sans-serif;
 }
 
