--- a/app/views/static_pages/homepage/index.erb
+++ b/app/views/static_pages/homepage/index.erb
@@ -109,11 +109,11 @@
   >
     <div class="title";">
       <h1 id="pitch">
-        ReadUp does running records for you.
+        ReadUp grades running records for you.
       </h1>
       <center>
         <h4 id="sub-pitch">
-          ReadUp listens to students read and creates a full running record for you.
+          ReadUp listens and grades reading so you can spend your time teaching.
         </h4>
       </center>
 
