--- a/app/views/static_pages/homepage/_signup_form.erb
+++ b/app/views/static_pages/homepage/_signup_form.erb
@@ -80,7 +80,7 @@
 <style type="text/css">
 
   form#signup-homepage {
-    background-color: rgba(238, 237, 236, 0.9);
+    background-color: #FAFBFC;
     margin: auto;
     border-radius: 0.2em;
     -webkit-box-shadow: -2px 2px 9px -2px rgba(0,0,0,0.75);
