navbar mostly styled properly

--- a/app/assets/stylesheets/homepage/_product-sections.scss
+++ b/app/assets/stylesheets/homepage/_product-sections.scss
@@ -11,7 +11,7 @@
 
  a#navbar-title {
    color:white;
-   font-family:'Conv_proximanova-bold-webfont';
+   font-family:'Conv_CircularStd-Bold';
    font-size:2em;
    margin-top: 0.3em;
    float: left;
@@ -50,6 +50,7 @@
  h4#sub-pitch {
    margin-top: 15px;
    font-size: 18px;
+   font-family: 'Conv_Proxima-Nova-Semibold';
  }
 
  h1#pitch {
