--- a/app/assets/stylesheets/homepage/_navbar.scss
+++ b/app/assets/stylesheets/homepage/_navbar.scss
@@ -42,7 +42,7 @@
 
      li a {
        text-decoration: none;
-       color: #ed7844;
+       color: #2C6D9C;
      }
    }
 
@@ -62,10 +62,15 @@
 
 }
 
+.navbar-right li a{
+  font-family: 'Conv_proximanova-regular-webfont';
+}
+
 
 button#top-button {
-  background-color: #ed7844;
+  background-color: white;
   font-family: 'Conv_proximanova-bold-webfont', sans-serif;
+  color: #2C6D9C;
 }
 
 button.signup-button {
@@ -82,6 +87,12 @@ button.log-in-fake-button {
    margin-top: 0px;
    border: none;
    padding-top: 7px;
+   color: white !important; 
+}
+
+.highlighted button.log-in-fake-button {
+   color: #2C6D9C !important; 
+
 }
 
 .navbar-logo {
