--- a/app/views/static_pages/homepage/_navbar_desktop.html.erb
+++ b/app/views/static_pages/homepage/_navbar_desktop.html.erb
@@ -27,7 +27,7 @@
       <li class="navbar-button-item">
         <a>
           <button id="top-button" onclick="mixpanel.track('navbar signup button clicked', {'location': 'navbar'});" data-toggle="modal" data-target="#signupEmail" class="pure-button-primary pure-button signup-button">
-            Sign up
+            Get started
           </button>
         </a>
       </li>
