--- a/app/views/static_pages/homepage/index.erb
+++ b/app/views/static_pages/homepage/index.erb
@@ -101,11 +101,11 @@
 <div class="splash-new">
   <div
     class="splash-container"
-    style="background: url('https://s3-us-west-2.amazonaws.com/readup-now/website/landing-page-hero-student-reading.jpg')
+    style="background: url('https://s3-us-west-2.amazonaws.com/readup-now/website/student-hero-resized.jpg')
           center
           top/cover
           no-repeat
-          #ba9e70;"
+          #3C8FCA;"
   >
     <div class="title";">
       <h1 id="pitch">
