--- a/app/views/static_pages/components/_footer.erb
+++ b/app/views/static_pages/components/_footer.erb
@@ -12,4 +12,8 @@
           <a class="footer--nav--link" href="https://storytime.zendesk.com/hc/en-us" target="_blank">Support</a>
       </nav> 
      </div>
+     <script> 
+         // Initialize smooth scroll lib 
+        var scroll = new SmoothScroll('a[href*="#"]');
+    </script>
 </footer>
