--- a/app/views/static_pages/components/_nav.erb
+++ b/app/views/static_pages/components/_nav.erb
@@ -10,8 +10,7 @@
           <!-- <h1 class="navbar-title">ReadUp</h1> -->
           </a>
           <ul class="navbar-right">
-            <li><a href="/case_study">Success Stories</a></li>
-            <li><a href="/team">About Us</a></li>
+            <li><a href="#end-no-reading">How it works</a></li>
             <!-- <li><a href="https://docsend.com/view/nhzqgin" target="_blank">product</a></li> -->
 
           </ul>
