--- a/app/views/static_pages/homepage/_navbar_desktop.html.erb
+++ b/app/views/static_pages/homepage/_navbar_desktop.html.erb
@@ -6,8 +6,7 @@
       </div>
     </a>
     <ul class="navbar-right">
-      <li><a id="case-study-link" href="case_study">Success Stories</a></li>
-      <li><a href="team">About Us</a></li>
+      <li><a href="#end-no-reading">How it works</a></li>
       <li class="navbar-button-item">
         <a>
           <% if session['educator'].nil? %>
