--- a/app/views/static_pages/homepage/headers/_libraries.erb
+++ b/app/views/static_pages/homepage/headers/_libraries.erb
@@ -14,6 +14,9 @@
   <!-- <link rel="stylesheet" href="/stylesheets/imports/pure-min.css"> -->
   <link rel="stylesheet" href="/stylesheets/imports/pure-min.css">
 
+  <!-- For auto scrolling to content -->
+  <script src="/js/smooth-scroll.js"></script>
+
 
   <!--[if lte IE 8]>
       <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/grids-responsive-old-ie-min.css">
