arrow buttons (slightly janky..)

--- a/client/src/StudentDashboard/styles.css
+++ b/client/src/StudentDashboard/styles.css
@@ -22,15 +22,17 @@
 }
 
 .leftButtonContainer {
-	width: 200px;
-	height: 70px;
+	min-width: 200px;
+	/*width: 200px;
+	height: 70px;*/
 	margin: 30px;
 
 }
 
 .rightButtonContainer {
-	width: 200px;
-	height: 70px;
+	min-width: 200px;
+	/*width: 200px;
+	height: 70px;*/
 	margin: 30px;
 
 }
