--- a/app/assets/stylesheets/homepage/_product-sections.scss
+++ b/app/assets/stylesheets/homepage/_product-sections.scss
@@ -50,6 +50,7 @@
  h4#sub-pitch {
    margin-top: 15px;
    font-size: 18px;
+   margin-bottom: 45px;
    font-family: 'Conv_Proxima-Nova-Semibold';
  }
 
