form field styling edits

--- a/app/assets/stylesheets/homepage/_product-sections.scss
+++ b/app/assets/stylesheets/homepage/_product-sections.scss
@@ -31,6 +31,10 @@
    padding-left: 0.7em;
  }
 
+ .signup-name-password {
+  margin-top: -13px;
+ }
+
  .signup-name-password-mobile {
    h2 {
      text-align: center;
