--- a/app/views/static_pages/homepage/headers/_libraries.erb
+++ b/app/views/static_pages/homepage/headers/_libraries.erb
@@ -2,6 +2,8 @@
   <script type="text/javascript" src="/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="/stylesheets/imports/bootstrap.min.css">
   <!-- grids -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  <!-- possibly more bootstrap -->
 
 <!-- end Boostrap -->
 
