desktop homepage formatted properly

--- a/app/assets/stylesheets/homepage/_modals.scss
+++ b/app/assets/stylesheets/homepage/_modals.scss
@@ -61,7 +61,7 @@ body.modal-open {
   margin-left: auto;
   margin-right: auto;
   padding: 11px 30px;
-  background-color: #ed7844;
+  background-color: #2C6D9C;
   font-family: 'Conv_proximanova-bold-webfont', sans-serif;
 
   margin-bottom: 30px;
