--- a/app/views/static_pages/homepage/index.erb
+++ b/app/views/static_pages/homepage/index.erb
@@ -186,7 +186,7 @@
 
 <div class="demo" data-toggle="modal" data-target="#myDemo">
 
-  <button
+<!--   <button
     type="button"
     onclick="DemoButtonClicked();"
     class="demo-request-button btn btn-primary btn-lg pure-button pure-button-primary get_update dialog-button" style="width: 11em;"
@@ -194,7 +194,10 @@
   >
   Request a Demo
 </button>
-</div>
+ -->
+   
+
+ </div>
 
 
 <img class="contact-image call-to-action-image" src="https://d2yudi7y1eei74.cloudfront.net/assets/phone.png">
