--- a/app/views/static_pages/homepage/_signup_form.erb
+++ b/app/views/static_pages/homepage/_signup_form.erb
@@ -89,6 +89,11 @@
     margin-bottom: 50px;
   }
 
+  .signup-setup {
+    width: 90%;
+    margin: 0 auto;
+  }
+
 
   form#signup-homepage .field {
     display: block;
