--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -112,7 +112,7 @@ h1 {
 	line-height: 1.3em;
 /*	color: #4a4a4a;
 */
-	color: #4a4a4a;
+	color: white;
 	text-align: center;
 	font-size: 1.7em;
 }
