--- a/client/src/StudentDashboard/components/BackArrowButton/styles.css
+++ b/client/src/StudentDashboard/components/BackArrowButton/styles.css
@@ -13,6 +13,8 @@
 
 	background-image: url(/images/dashboard/blue-arrow.svg);
 	background-size: 100% 100%;
+	-webkit-filter: drop-shadow(0px 0px 5px rgba(0,0,0,0.76));
+    filter:         drop-shadow(0px 0px 5px rgba(0,0,0,0.76)); 
 
 	/* unselectable: https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting-using-css*/
 	-webkit-touch-callout: none; /* iOS Safari */
