--- a/client/src/StudentDashboard/components/BookPage/styles.css
+++ b/client/src/StudentDashboard/components/BookPage/styles.css
@@ -15,6 +15,13 @@
 	/*min-height: 200px;*/
 }
 
+.paperTearImage {
+	width: 100%;
+	height: 10px;
+	position: relative;
+	top: -10px;
+}
+
 .readerTextContainer {
 	margin-top: 10px;
 	flex: 1;
