--- a/client/src/StudentDashboard/components/ForwardArrowButton/styles.css
+++ b/client/src/StudentDashboard/components/ForwardArrowButton/styles.css
@@ -13,6 +13,9 @@
 
 	background-image: url(/images/dashboard/green-arrow.svg);
 	background-size: 100% 100%;
+	-webkit-filter: drop-shadow(0px 0px 5px rgba(0,0,0,0.76));
+    filter:         drop-shadow(0px 0px 5px rgba(0,0,0,0.76)); 
+	/*box-shadow: 10px 10px 51px 1px rgba(0,0,0,0.76);*/
 
 	/* unselectable: https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting-using-css*/
 	-webkit-touch-callout: none; /* iOS Safari */
@@ -44,6 +47,8 @@
 	border-radius: 5px;
 	background-image: url(/images/dashboard/green-arrow.svg);
 	background-size: 100% 100%;
+	-webkit-filter: drop-shadow(0px 0px 5px rgba(0,0,0,0.76));
+    filter:         drop-shadow(0px 0px 5px rgba(0,0,0,0.76)); 
 
 	opacity: 0.4;
 
