--- a/client/src/StudentDashboard/styles.css
+++ b/client/src/StudentDashboard/styles.css
@@ -15,7 +15,7 @@
 	width: 100%;
 	/*height: 100%;*/
 	flex: 1;
-	background-color: black;
+	background-color: #0C1F2C;
 	z-index: 1;
 	justify-content: space-around;
 	align-items: center;
