--- a/client/src/StudentDashboard/components/BookPage/styles.css
+++ b/client/src/StudentDashboard/components/BookPage/styles.css
@@ -1,9 +1,22 @@
 
+.fullContainer {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-flow: row;
+	border: 2px solid #826E5A;
+}
+
+.bookEdge {
+	width: 7px;
+	height: 100%;
+	background-image: url(/images/dashboard/read_edgie.png)
+}
+
 .readerContentContainer {
 	width: 100%;
 	height: 100%;
 	background-color: white;
-	border: 2px solid #826E5A;
 	/*padding: 5px;*/
 	display: flex;
 	flex-flow: column;
