--- a/client/src/StudentDashboard/overlays/CountdownOverlay/styles.css
+++ b/client/src/StudentDashboard/overlays/CountdownOverlay/styles.css
@@ -28,7 +28,7 @@
 .countdownTitle {
 	margin-top: 20px;
 	font-size: 1.4em;
-	font-weight: bold;
+	font-family: Conv_proximanova-bold-webfont;
 }
 
 .countdownNumber {
