--- a/app/views/student_dashboard/index.html.erb
+++ b/app/views/student_dashboard/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("StudentDashboard", props: @student_dashboard_props, prerender: false, class: 'fullHeight', id: 'fullHeight', style: "height: 100%;") %>
+<%= react_component("StudentDashboard", props: @student_dashboard_props, prerender: false, class: 'fullHeight', id: 'studentDashboardContainer', style: "height: 100%;") %>
