added some more font styling

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -38,7 +38,7 @@ body {
 }
 
 p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: Conv_proximanova-regular-webfont, verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
 }
