--- a/app/assets/stylesheets/homepage/_product-sections.scss
+++ b/app/assets/stylesheets/homepage/_product-sections.scss
@@ -212,6 +212,7 @@
 
       h1#pitch {
         font-size: 1.5em;
+        margin-top: 0.9em;
       }
       h4#sub-pitch {
         font-size: 17px; 
@@ -237,6 +238,14 @@
     margin-top: 8px;
   }
 
+  // have a different resized background on mobile
+  div.splash-container {
+  background: url('https://s3-us-west-2.amazonaws.com/readup-now/website/student-hero-mobile.jpg')
+          center
+          top/cover
+          no-repeat
+          #3C8FCA !important;
+  }
 
 
 }
