Make the validation errors readable

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -699,6 +699,7 @@ fieldset input {
 button.get_update{
 	background-color: #61c242; 
 	font-family: 'Conv_Proxima-Nova-Semibold', sans-serif;
+	margin-top: 10px;
 }
 
 section.progress h4 {
