--- a/app/views/static_pages/homepage/_signup_form.erb
+++ b/app/views/static_pages/homepage/_signup_form.erb
@@ -57,7 +57,7 @@
               type="password"
               class="input form-control"
               pattern=".{6,}"
-              title="Password must be at least 6 characters long"
+              title="Must be at least 6 characters long."
               required
             >
           </div>
@@ -117,24 +117,13 @@
 
   /* this is meant to apply to jquery validator errors!*/
   form#signup-homepage label {
-/*    display: block;
-    font-size: 12px;
+    display: block;
+    font-size: 13px;
     text-align: right;
     position: absolute;
     width: 98%;
     bottom: -13px;
     font-family: 'Conv_proximanova-bold-webfont';
-*/
-
-    display: block;
-    font-size: 13px;
-    text-align: left;
-    position: absolute;
-    width: 98%;
-    bottom: -13px;
-    font-family: 'Conv_proximanova-bold-webfont';
-
-
   }
 
   form#signup-homepage input::placeholder {
