--- a/client/src/StudentDashboard/components/BookInfoHeader/styles.css
+++ b/client/src/StudentDashboard/components/BookInfoHeader/styles.css
@@ -14,6 +14,7 @@
 
 .bookInfoHeaderContainerTitle {
 	font-size: 1.6em;
+	font-family: 'Conv_proximanova-semibold-webfont';
 }
 
 .bookInfoHeaderContainerSubtitle {
