--- a/client/src/StudentDashboard/components/ForwardArrowButton/styles.css
+++ b/client/src/StudentDashboard/components/ForwardArrowButton/styles.css
@@ -13,8 +13,8 @@
 
 	background-image: url(/images/dashboard/green-arrow.svg);
 	background-size: 100% 100%;
-	-webkit-filter: drop-shadow(0px 0px 5px rgba(0,0,0,0.76));
-	filter:         drop-shadow(0px 0px 5px rgba(0,0,0,0.76)); 
+    -webkit-filter: drop-shadow(0px 2px 25px rgba(0,0,0,0.66));
+    filter: drop-shadow(0px 2px 25px rgba(0,0,0,0.66));
 	/*box-shadow: 10px 10px 51px 1px rgba(0,0,0,0.76);*/
 
 	/* unselectable: https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting-using-css*/
@@ -47,8 +47,8 @@
 	border-radius: 5px;
 	background-image: url(/images/dashboard/green-arrow.svg);
 	background-size: 100% 100%;
-	-webkit-filter: drop-shadow(0px 0px 5px rgba(0,0,0,0.76));
-    filter:         drop-shadow(0px 0px 5px rgba(0,0,0,0.76)); 
+    -webkit-filter: drop-shadow(0px 2px 25px rgba(0,0,0,0.66));
+    filter: drop-shadow(0px 2px 25px rgba(0,0,0,0.66));
 
 	opacity: 0.4;
 
@@ -76,6 +76,7 @@
 .arrowButtonTitle {
 	font-size: 1.6em;
 	margin-top: 3px;
+	font-family: 'Conv_proximanova-semibold-webfont';
 }
 
 .arrowButtonSubtitle {
