--- a/client/src/StudentDashboard/components/NavigationBar/styles.css
+++ b/client/src/StudentDashboard/components/NavigationBar/styles.css
@@ -23,6 +23,7 @@
 	margin-left: 60px;
 	/*background-color: red;*/
 	margin-right: auto;
+	font-family: 'Conv_proximanova-semibold-webfont'
 }
 
 .centerDisplayContainer {
