eliminate modal from "Get Started" nav bar button. Add smooth scroll to form

--- a/app/views/static_pages/homepage/_navbar_desktop.html.erb
+++ b/app/views/static_pages/homepage/_navbar_desktop.html.erb
@@ -24,8 +24,8 @@
       </li>
 
       <li class="navbar-button-item">
-        <a>
-          <button id="top-button" onclick="mixpanel.track('navbar signup button clicked', {'location': 'navbar'});" data-toggle="modal" data-target="#signupEmail" class="pure-button-primary pure-button signup-button">
+        <a href="#pitch">
+          <button id="top-button" onclick="mixpanel.track('navbar signup button clicked', {'location': 'navbar'});" class="pure-button-primary pure-button signup-button">
             Get started
           </button>
         </a>
