--- a/client/src/StudentDashboard/modals/subcomponents/ButtonArray/styles.css
+++ b/client/src/StudentDashboard/modals/subcomponents/ButtonArray/styles.css
@@ -29,8 +29,8 @@
 	font-weight: bold;
 	font-style: italic;
 	font-size: 1.2em;
-	font-family: 'Arial';
 	margin: 10px;
+	font-family: Conv_proximanova-semibold-webfont;
 }
 
 /*.doneModal {
