--- a/client/src/StudentDashboard/styles.css
+++ b/client/src/StudentDashboard/styles.css
@@ -1,4 +1,8 @@
 
+
+
+
+
 .fullHeight {
 	height: 100%;
 	display: flex;
@@ -15,22 +19,24 @@
 	width: 100%;
 	/*height: 100%;*/
 	flex: 1;
-	background-color: black;
+	background-color: #0C1F2C;
 	z-index: 1;
 	justify-content: space-around;
 	align-items: center;
 }
 
 .leftButtonContainer {
-	width: 200px;
-	height: 70px;
+	min-width: 200px;
+	/*width: 200px;
+	height: 70px;*/
 	margin: 30px;
 
 }
 
 .rightButtonContainer {
-	width: 200px;
-	height: 70px;
+	min-width: 200px;
+	/*width: 200px;
+	height: 70px;*/
 	margin: 30px;
 
 }
