--- a/client/src/StudentDashboard/components/BookPage/styles.css
+++ b/client/src/StudentDashboard/components/BookPage/styles.css
@@ -1,9 +1,24 @@
 
+.fullContainer {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-flow: row;
+	border: 3px solid #937050;
+	box-shadow: -5px 2px 73px 2px rgba(0,0,0,0.65);
+
+}
+
+.bookEdge {
+	width: 7px;
+	height: 100%;
+	background-image: url(/images/dashboard/read_edgie.png)
+}
+
 .readerContentContainer {
 	width: 100%;
 	height: 100%;
 	background-color: white;
-	border: 2px solid #826E5A;
 	/*padding: 5px;*/
 	display: flex;
 	flex-flow: column;
@@ -15,6 +30,13 @@
 	/*min-height: 200px;*/
 }
 
+.paperTearImage {
+	width: 100%;
+	height: 10px;
+	position: relative;
+	top: -10px;
+}
+
 .readerTextContainer {
 	margin-top: 10px;
 	flex: 1;
@@ -24,7 +46,6 @@
 }
 
 .textParagraph {
-	font-family: 'Arial';
 	font-size: 1.4em;
 	margin-left: 40px;
 	margin-right: 40px;
@@ -33,7 +54,6 @@
 .pageNumber {
 	text-align: center;
 	font-weight: bold;
-	font-family: 'Arial';
 	font-size: 1.2em;
 	padding: 10px;
 	height: 40px;
